cloudformation/cfn-init.yml
---
Parameters:
  SSHKey:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Key name

Mappings:
  AMIs:
    us-east-1:
      amazon: ami-05fa00d4c63e32376
      ubuntu20: ami-08d4ac5b634553e16
      ubuntu22: ami-052efd3df9dad4825
      redhat: ami-06640050dc3f556bb
    us-west-1:
      amazon: ami-018d291ca9ffc002f
      ubuntu20: ami-01154c8b2e9a14885
      ubuntu22: ami-085284d24fe829cd0
      redhat: ami-0186e3fec9b0283ee

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref SSHKey
      ImageId: !FindInMap [AMIs, !Ref "AWS::Region", amazon]
      InstanceType: t2.micro
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -ex
            yum update -y aws-cfn-bootstrap
            #start cfn-init
            /opt/aws/bin/cfn-init -s ${AWS::StackId} -r EC2Instance --region ${AWS::Region} |
            error_exit 'Failed to run cfn-init'
      Tags:
        - Key: Name
          Value: Sunday
    Metadata:
      Comment: Install a simple Apache HTTP
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
          files:
            "/var/www/html/index.html":
              content: |
                <h1>OI<h1>
                <h4>Meu chapa<h4>
              mode: '000644'
          commands:
            hello:
              command: "echo 'Coe rapaziada'"
          services:
            sysvinit:
              httpd:
                enable: 'true'
                ensureRunning: 'true'



  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP and SSH
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
